# Tar.ai

./: .env.example  .gitignore  ArmadaCoPilot_PRD_GelistirmePlani.md  CLAUDE.md  LICENSE  README.md  requirements.txt  run.sh
agents/: agent_1_price.py  agent_2_weather.py  agent_3_news.py  agent_4_market.py  agent_5_decision.py  pyproject.toml
agents/core/: models.py  reasoning.py  scoring.py
api/: main.py
docs/: ArmadaCoPilot_PRD_GelistirmePlani.md  OYKU_FRONTEND_BRIEF.md  OYKU_FRONTEND_BRIEF_V2.md  SEDEF_ONBOARDING.md
public/: fallback_data.json
