[project]
name = "armada-copilot-agents"
version = "0.1.0"
description = "Armada Co-Pilot — kırmızı mercimek risk ajan sistemi"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "openai>=1.50.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
